--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
     <string name="app_name">Group_Project</string>
     <string name="moduleTitle">Emergency Assistance Module</string>
-    <string name="emergency">Emergency Dialing</string>
-    <string name="location">Sharing Location</string>
+    <string name="emergency">Emergency\nDialing</string>
+    <string name="location">Sharing\nLocation</string>
     <string name="locationTitle">Location</string>
-    <string name="shareLocation">Share current location</string>
+    <string name="shareLocation">Share location</string>
     <string name="chat">Emergency\nServices Chat</string>
     <string name="dailingTitle">Emergency Dialing</string>
     <string name="chatTitle">Emergency Chat</string>
@@ -12,7 +12,7 @@
     <string name="ambulance">Ambulance</string>
     <string name="polis">Polis</string>
     <string name="fireBrigade">Fire Brigade</string>
-    <string name="naturalDisaster">Natural Disasters</string>
+    <string name="naturalDisaster">Natural Disaster</string>
     <string name="civilDefense">Civil Defense</string>
     <string name="todo">TODO</string>
     <string name="callBtn1">Call Ambulance</string>
